# breeze

./: .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  CODEX-NOTES.md  DESIGN.json  DESIGN.md  PRODUCT.md  README.md  UPGRADING.md  docker-compose.override.yml.dev  docker-compose.yml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  turbo.json
.github/: dependabot.yml
.github/workflows/: build-os-display-test-web-image.yml  ci-smoke-binary-source-github.yml  ci-smoke-binary-source-local.yml  ci.yml  codeql.yml  dev-build-agent.yml  dev-web-image-os-version-v069.yml  dev-web-image-os-version.yml  doc-verify.yml  docs-ci.yml  fix-install-uninstall-image.yml  release.yml  security.yml
agent/: Makefile  go.mod  go.sum
agent/installer/: breeze.wxs
apps/api/: Dockerfile  package.json  tsup.config.ts  vitest.config.site-scope-coverage.ts  vitest.config.ts  vitest.integration.config.ts
apps/docs/: package.json
apps/helper/: package.json
apps/helper/src-tauri/: Cargo.toml
apps/helper/src-tauri/src/: lib.rs
apps/helper/src-tauri/src/ipc/: client.rs  envelope.rs  mod.rs  token.rs  transport.rs
apps/mobile/: App.tsx  app.json  metro.config.js  package.json  vitest.config.ts
apps/portal/: package.json
apps/viewer/: package.json
apps/viewer/src-tauri/: Cargo.toml
apps/web/: Dockerfile  astro.config.mjs  package.json  sentry.client.config.ts  sentry.server.config.ts  tailwind.config.mjs
deploy/: .env.example  docker-compose.prod.yml
docker/: Dockerfile.api  Dockerfile.api.dev  Dockerfile.binaries  Dockerfile.web  Dockerfile.web.dev  turnserver.conf
docs/: DISASTER_RECOVERY.md  SECRET_ROTATION.md  SECURITY.md  SECURITY_PRACTICES.md
docs/deploy/: agent-update-trust-bootstrap.md
docs/registers/: agent-result-validation-register.md  internal-trust-register.md  queue-worker-register.md  recovery-supply-chain-register.md  recovery-token-register.md
docs/release-notes/: security-hardening-template.md
docs/security-reports/: README.md  auth_perf_analysis_2026-05-04.md  customer_launch_readiness_second_pass_2026-05-24.md  security_best_practices_report.md  security_best_practices_report_2026-04-24_oauth_unpushed.md  security_best_practices_report_2026-05-02_general_hardening.md  security_best_practices_report_r001_r079.md  security_best_practices_report_r080_r149.md  security_best_practices_report_r150_r157.md  security_best_practices_report_r158_r163.md  security_best_practices_report_r164_r174.md  security_best_practices_report_r175_r177.md  security_best_practices_report_r178.md  security_best_practices_report_r179_r180.md  security_best_practices_report_r181.md  (+14 more)
e2e-tests/: package-lock.json  package.json  release-checklist-v0.70-results.md  test-helpers.ts
scripts/: check-guided-setup-compose-rewrites.sh  guided-setup.sh
(+1142 files in other folders)
