[package]
name = "breeze-helper"
version = "0.1.0"
edition = "2021"
description = "Breeze RMM Helper - AI-powered IT assistant"

[lib]
name = "breeze_helper_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
reqwest = { version = "0.12", features = ["rustls-tls", "stream"], default-features = false }
tokio = { version = "1", features = ["sync"] }
futures-util = "0.3"
whoami = "2"
chrono = "0.4"
