[package]
name = "breeze-helper"
version = "0.1.0"
edition = "2021"
description = "Breeze RMM Helper - AI-powered IT assistant"

[lib]
name = "breeze_helper_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["raw_value"] }
serde_yaml = "0.9"
reqwest = { version = "0.12", features = ["rustls-tls", "stream"], default-features = false }
tokio = { version = "1", features = ["sync", "net", "io-util", "time", "rt", "macros"] }
futures-util = "0.3"
whoami = "2"
chrono = "0.4"
hmac = "0.13"
sha2 = "0.11"
hex = "0.4"

[dev-dependencies]
# `test-util` enables paused/virtual-clock tests (start_paused, time::advance)
# for the reconnect-driver unit tests without real wall-clock sleeps.
tokio = { version = "1", features = ["test-util"] }

[target.'cfg(windows)'.dependencies]
windows = { version = "0.58", features = [
  "Win32_Foundation",
  "Win32_Security",
  "Win32_Security_Authorization",
  "Win32_System_Threading",
] }

[target.'cfg(unix)'.dependencies]
libc = "0.2"
